# hyprsessionmanager

./: CMakeLists.txt  README.md  SessionManager.cpp  SessionManager.h  hyprsessionmanager.desktop  main.cpp
